adjust smeite.com info for new version

--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -12,8 +12,6 @@ title =  "帮助中心_食美特，爱美食爱生活"
         <ul class="aside-nav">
             <li class="current"><a href="/help">帮助中心</a></li>
             <li ><a href="/aboutUs">关于食美特</a></li>
-            <li ><a href="/jifenbao">购物送集分宝</a></li>
-            <li ><a href="/rebate">天猫/淘宝返利</a></li>
             <li ><a href="/shiDou">食豆攻略</a></li>
             <li ><a href="/aboutCheckIn">签到有奖</a></li>
             <li ><a href="/contactUs">联系我们</a></li>
@@ -131,7 +129,7 @@ title =  "帮助中心_食美特，爱美食爱生活"
 
 
                 <!-- 淘宝返利 -->
-                <h5>淘宝/天猫返利<span> ------ 补贴家用，也是好样的^_^</span></h5>
+                <h5>签到送集分宝<span> ------ 补贴家用，也是好的^_^</span></h5>
                 <dl>
                     <dt><a href="javascript:;">什么是集分宝？集分宝有何用？</a></dt>
                     <dd>
@@ -145,28 +143,14 @@ title =  "帮助中心_食美特，爱美食爱生活"
                     <dt><a href="javascript:;">如何在食美特获得集分宝？</a></dt>
                     <dd>
                         <p>在食美特获得集分宝有多种方式，</p>
-                        <p>1) 通过食美特购物送集分宝；<a href="/jifenbao">去看看详情</a></p>
-                        <p>2) 通过淘宝/天猫返利获得集分宝；<a href="/rebate">去看看详情</a></p>
-                        <p>3) 参与邀请有奖，获得集分宝；<a href="/user/account/invite">去看看详情</a></p>
-                        <p>4) 参与每天的签到活动，赠送集分宝<a href="/user/account/invite">去看看详情</a></p>
+                        <p>1) 参与邀请有奖，获得集分宝；<a href="/user/account/invite">去看看详情</a></p>
+                        <p>2) 参与每天的签到活动，赠送集分宝<a href="/user/account/invite">去看看详情</a></p>
                         <p> …… </p>
                         <p>我们会不定期的推出各种活动，赠送集分宝，各位亲，注意关注我们的动态哦 </p>
                     </dd>
                 </dl>
-                <dl>
-                    <dt><a href="javascript:;">什么是购物送集分宝？</a></dt>
-                    <dd>
-                        <p>食美特在收录每件宝贝时，会额外赠送集分宝，当您交易成功时，当天即打入你的支付宝账号</p>
-                    </dd>
-                </dl>
-                <dl>
-                    <dt><a href="javascript:;">什么是淘宝/天猫返利？</a></dt>
-                    <dd>
-                        <p>当您在淘宝、天猫看见宝贝时，通过粘贴网址到食美特，将会返还一定比例的金额给您。使用食美特返利操作非常简单，只需要三步</p>
-                        <p> <a href="/rebate"><img src="/assets/img/ui/help/3step.png" alt="淘宝天猫返利"> </a> </p>
-                        <p><a href="/rebate">去看看详细情况</a></p>
-                    </dd>
-                </dl>
+
+
                 <dl>
                     <dt><a href="javascript:;">什么是食豆，食豆有什么用？如何获得食豆？</a></dt>
                     <dd>
