--- a/app/views/infos/help/shiDou.scala.html
+++ b/app/views/infos/help/shiDou.scala.html
@@ -12,8 +12,6 @@ title =  "关于我们_食美特，爱美食爱生活"
             <ul class="aside-nav">
                 <li><a href="/help">帮助中心</a></li>
                 <li ><a href="/aboutUs">关于食美特</a></li>
-                <li ><a href="/jifenbao">购物送集分宝</a></li>
-                <li ><a href="/rebate">天猫/淘宝返利</a></li>
                 <li class="current"><a href="/shiDou">食豆攻略</a></li>
                 <li ><a href="/aboutCheckIn">签到有奖</a></li>
                 <li ><a href="/contactUs">联系我们</a></li>
@@ -45,7 +43,10 @@ title =  "关于我们_食美特，爱美食爱生活"
                    <p>2) 创建宝贝主题</p>
                    <p>3) 参与话题讨论、主题讨论、宝贝讨论</p>
                    <p>4) 参加签到活动</p>
-                   <p>5) ……</p>
+                   <p>5) 创建小镇</p>
+                   <p>6) 发布私房菜</p>
+                   <p>7) 发布帖子</p>
+                   <p>8) ……</p>
                    <p> 赶紧拥有我把^_^</p>
                     </div>
 
