adjust friends link

--- a/app/views/admin/adverts/textEdit.scala.html
+++ b/app/views/admin/adverts/textEdit.scala.html
@@ -83,7 +83,12 @@
        <script type="text/javascript">
             $(function(){
 
-            $('#xheditor').xheditor({tools:'Fontface,FontSize,Bold,Link,Unlink,|,Source,Preview' });
+            $('#xheditor').xheditor({
+                tools:'Fontface,FontSize,Bold,Link,Unlink,|,Source,Preview'
+
+                    }
+
+            );
 
                 $("#picUpload").uploadify({
                     'fileObjName' : 'fileData',
