--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -140,6 +140,14 @@
 
                 </ul>
                 </li>
+                <!--  cms 系统管理 -->
+                <li class='submenu @if(nav=="cms"){active open}'>
+                    <a href="#"><i class="icon icon-th-list"></i> <span>CMS系统管理</span></a>
+                    <ul>
+                        <li><a href='@controllers.admin.routes.Adverts.channel("friends")'>友情链接</a></li>
+
+                    </ul>
+                </li>
             </ul>
 
         </div>
