--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -144,8 +144,8 @@
                         <dl class="how">
                             <dt>爱上食美特</dt>
                             <dd><a href="/themes" target="_blank">爱上美食</a></dd>
-                            <dd><a href="/themes" target="_blank">爱上生活</a></dd>
-                            <dd><a href="/forum/view/1" target="_blank">提建议</a></dd>
+                            <dd><a href="/sites" target="_blank">爱上生活</a></dd>
+                            <dd><a href="/cookbook" target="_blank">私房菜</a></dd>
                         </dl>
                         <dl class="service">
                             <dt>服务支持<span>（8:30-23:00,创业伤不起啊）</span></dt>
