adjust for publish

--- a/app/views/infos/help/aboutUs.scala.html
+++ b/app/views/infos/help/aboutUs.scala.html
@@ -42,7 +42,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                              我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
 
                          </p>
-                         <p> 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</p>
+                         <p> 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更健康的购物方式！</p>
 
                          <p>理念：创造更美好的日常生活</p>
                          </div>
