--- a/app/views/infos/help/cooperation.scala.html
+++ b/app/views/infos/help/cooperation.scala.html
@@ -38,7 +38,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                     <div>
                         <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
                             我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
-                            我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式。
+                            我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更健康的购物方式。
                         </p>
                         <p>
                             我们不鼓励商家擅自在网站上分享自家的商品，但欢迎优质的商家和品牌商与我们联系，按照我们的要求来推荐合适商品，参与活动，并为用户提供丰厚、可靠的商品。
