--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -37,7 +37,7 @@ title =  "帮助中心_食美特，爱美食爱生活"
                 <dl>
                     <dt><a href="javascript:;">食美特是什么，有啥优势？</a></dt>
                     <dd>
-                        <p>食美特致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。 我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更节省的购物方式！</p>
+                        <p>食美特致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。 我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。 我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议和更健康的购物方式！</p>
                         <p>1) 小编们每天精挑细选优质商品，严格把控商品质量，质量请放心；</p>
                         <p>2) 食美特的网友们分享购买过的商品，如实评价，真实性请放心；</p>
                         <p>3) 99%的食美特宝贝都享受购物送集分宝活动。（在享受店家折扣、送集分宝的基础上，食美特还额外赠送）；</p>
