--- a/app/views/template.scala.html
+++ b/app/views/template.scala.html
@@ -1,4 +1,4 @@
-@(user:Option[models.user.User]=None,nav:String = "",subNav:String = "",title: String = "食美特，爱美食爱生活",keywords:String = "食美特,美食,创意,特产,礼物,居家,导购,smeite,坚果,巧克力,zakka,简约",description:String = "Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议")(css:String)(content: Html)(js:Html)
+@(user:Option[models.user.User]=None,nav:String = "",subNav:String = "",title: String = "食美特，爱美食爱生活",keywords:String = "食美特,美食,特产,食材,礼物,居家,导购,smeite,坚果,巧克力,zakka,简约,菜谱,私房菜,小镇",description:String = "Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。我们所做的一切，就是通过我们的努力，为更多的消费者提供更有效、更有价值的购物决策建议")(css:String)(content: Html)(js:Html)
 <!doctype html>
 <html>
 <head>
@@ -145,7 +145,7 @@
                             <dt>爱上食美特</dt>
                             <dd><a href="/themes" target="_blank">爱上美食</a></dd>
                             <dd><a href="/sites" target="_blank">爱上生活</a></dd>
-                            <dd><a href="/cookbook" target="_blank">私房菜</a></dd>
+                            <dd><a href="/cookbook" target="_blank">爱上私房菜</a></dd>
                         </dl>
                         <dl class="service">
                             <dt>服务支持<span>（8:30-23:00,创业伤不起啊）</span></dt>
