--- a/app/views/infos/help/aboutUs.scala.html
+++ b/app/views/infos/help/aboutUs.scala.html
@@ -38,7 +38,7 @@ title =  "关于我们_食美特，爱美食爱生活"
                          <div>
                          <p>食美特，爱美食爱生活 </p>
 
-                         <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品以及充满创意的好玩意。
+                         <p>Smeite.com致力于发现绿色安全、健康美味的食品，推荐美观实用、简约实惠的家居用品。
                              我们严格把控商品的品质，用心创造一个值得信赖的购物分享社区。
 
                          </p>
