add alimama for clickUrl

--- a/app/views/pages/index.scala.html
+++ b/app/views/pages/index.scala.html
@@ -77,7 +77,7 @@ nav="index"
                     <div class="weixin" id="J_Weixin" ></div>
                 </div>
             </div>
-            <div class="text ofh"><a href="">在这些地方关注我们</a></div>
+            <div class="text ofh">在这些地方关注我们</div>
         </div>
     </div>
     <!--最近热门的好玩意儿 end-->
