--- a/app/views/users/regLogin/login.scala.html
+++ b/app/views/users/regLogin/login.scala.html
@@ -14,9 +14,9 @@ title =  "食美特，爱美食爱生活——用户登陆"
                     </legend>
                     <div class="field-box">
                         <div class="sns-login pt20 clearfix">
-                            <a class="l-qq" href="" target="_blank">QQ帐号登录</a>
-                            <a class="l-sina" href="" target="_blank">新浪微博登录</a>
-                            <a class="l-tao" href="" target="_blank">淘宝帐号登录</a>
+                            <a class="l-qq" href="#" target="_blank">QQ帐号登录</a>
+                            <a class="l-sina" href="#" target="_blank">新浪微博登录</a>
+                            <a class="l-tao" href="#" target="_blank">淘宝帐号登录</a>
                         </div>
 
                         <div class="smeite-login">
