update info from taobao 1

--- a/app/views/admin/managers/pullGoods.scala.html
+++ b/app/views/admin/managers/pullGoods.scala.html
@@ -33,66 +33,25 @@
 
                 $("#J_batchAction").click(function(){
                     $('#J_batchAction').removeClass("btn-info").addClass("btn-warning").html("开始批量更新数据，请耐心等待**************")
-                    getNumIids(1)
+                   updateGoods()
 
                 })
 
 
-            function getNumIids(page){
+            function updateGoods(){
                 $.ajax({
-                    url:"/admin/manager/getNumIids?p="+page,
+                    url:"/admin/manager/updateGoods",
                     type:'get',
                     dataType:'json',
                     success:function(data){
                         if(data.code =='100'){
-                           pullTaobaoke(data.nums)
-                          if(page <=data.totalPages){
-                              getNumIids(page+1)
-                          }else{
                               $('#J_batchAction').removeClass("btn-warning").addClass("btn-info").html("批量更新完成")
-                          }
-
                         }
                     }
                 })
             }
 
-            function pullTaobaoke(nums){
-                TOP.api('rest','post',{
-                    method:'taobao.taobaoke.widget.items.convert',
-                    num_iids:nums,
-                    outer_code:'smeite',
-                    fields:'title,pic_url,num_iid,volume,price,promotion_price,commission_rate,click_url'
-                },function(resp){
-                    if(resp.error_response){
-                        alert('taobao.taobaoke.widget.items.convert接口获取商信息品失败!'+resp.error_response.msg);
-                        return false;
-                    } else {
-                        var total=resp.total_results;
-                        if (total > 0) {
-                            var respItem=resp.taobaoke_items.taobaoke_item;
-                            if (respItem.length > 0) {
-                                $.ajax({
-                                    type:"POST",
-                                    url:"/admin/goods/collectGoodses",
-                                    data:JSON.stringify(respItem),
-                                    contentType:"application/json; charset=utf-8",
-                                    dataType: "json",
-                                    success:function(data){
-                                        if(data.code=="100"){
 
-                                        }
-                                    }
-                                })
-
-
-
-                            }
-                        }
-                    }
-
-                })
-            }
 
         </script>
 
