adjust update goods from taobao

--- a/app/views/admin/managers/index.scala.html
+++ b/app/views/admin/managers/index.scala.html
@@ -98,7 +98,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href='@controllers.admin.routes.Managers.updateGoods'>
+                        <a href='@controllers.admin.routes.Managers.gotoUpdateGoods'>
                             <i class="icon-shopping-bag"></i>
                              商品更新管理
                         </a>
