--- a/app/views/admin/template.scala.html
+++ b/app/views/admin/template.scala.html
@@ -82,11 +82,9 @@
                     <a href="#"><i class="icon icon-th-list"></i> <span>用户管理</span></a>
                     <ul>
                         <li><a href="@controllers.admin.routes.Users.list(1)">用户管理</a></li>
-                        <li><a href="@controllers.admin.routes.Users.orders(1)">用户订单管理</a></li>
                         <li><a href="@controllers.admin.routes.Users.invitePrizes(1)">邀请有奖</a></li>
                         <li><a href="@controllers.admin.routes.Users.exchangeShiDous(1)">食豆兑换申请</a></li>
-                        <li><a href="@controllers.admin.routes.Users.rebates(1)">集分宝发放管理</a></li>
-                        <li><a href="@controllers.admin.routes.Users.taobaokeIncomes(1)">淘宝客报表</a></li>
+                        <li><a href="@controllers.admin.routes.Users.exchangeCredits(1)">集分宝兑换申请</a></li>
                     </ul>
                 </li>
 
