--- a/app/views/infos/help/help.scala.html
+++ b/app/views/infos/help/help.scala.html
@@ -41,7 +41,7 @@ title =  "帮助中心_食美特，爱美食爱生活"
                         <p>1) 小编们每天精挑细选优质商品，严格把控商品质量，质量请放心；</p>
                         <p>2) 食美特的网友们分享购买过的商品，如实评价，真实性请放心；</p>
                         <p>3) 99%的食美特宝贝都享受购物送集分宝活动。（在享受店家折扣、送集分宝的基础上，食美特还额外赠送）；</p>
-                        <p>4) 食美特还拥有强大的<a href="/rebate">淘宝/天猫购物返利</a>功能。最高返还50%，购物成功后，无须提现，当天到账。</p>
+                        <p>4) 食美特还拥有强大的<a href="/credit">淘宝/天猫购物返利</a>功能。最高返还50%，购物成功后，无须提现，当天到账。</p>
                         <p>5) …… </p>
                         <p>6) 总之，还有很多功能等待您去挖掘。我们会不断的更新产品，建设一个透明、真实的社区，努力为网友提供更可靠的购物决策和更节省的购物方式。 </p>
                         <p>6) 我们说到做到！我们期待您的<a href="/forum/view/3">监督！！</a></p>
