--- a/app/views/admin/users/filterUserExchangeCredits.scala.html
+++ b/app/views/admin/users/filterUserExchangeCredits.scala.html
@@ -1,4 +1,4 @@
-@(manager:models.admin.Manager,page:models.Page[models.user.UserRebate],form: Form[controllers.admin.FilterUserRebateFormData])))
+@(manager:models.admin.Manager,page:models.Page[models.user.UserExchangeCredit],form: Form[controllers.admin.FilterUserExchangeCreditFormData])))
 @views.html.admin.template(manager,"user") {
 
     <div id="content-header">
@@ -21,7 +21,7 @@
                 <h5>用户返利筛选</h5>
             </div>
             <div class="widget-content nopadding">
-                <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Users.filterRebates">
+                <form class=" form-horizontal" id="J_filterForm" method="get" action="@controllers.admin.routes.Users.filterExchangeCredits">
                     <input type="hidden" name="currentPage" id="J_currentPage" value="1">
                     <div class="error-row">
                         <p class="error"></p>
@@ -80,7 +80,7 @@
                 <tr>
 
                     <th>用户Id</th>
-                    <th>类型</th>
+
                     <th>返利数量</th>
                     <th>提交时间</th>
                     <th>处理状态</th>
@@ -93,15 +93,7 @@
                 <tr id="@item.id.get">
 
                     <td><a  href="@controllers.users.routes.Users.home(item.uid)"  target="_blank"> @item.uid</a> </td>
-                    <td>
-                        @if(item.rebateType == 0){
-                        <span class="label label-info">新人见面礼</span>
-                        }
-                        @if(item.rebateType == 1){
-                        <span class="label label-success">购物返利</span>
-                        }
 
-                    </td>
                     <td>@item.num</td>
                     <td>@item.withdrawTime</td>
                     <td>
@@ -119,7 +111,7 @@
 
                     <td>
 
-                        <a href="@controllers.admin.routes.Users.editRebate(item.id.get)"><i class="icon-edit"></i></a>
+                        <a href="@controllers.admin.routes.Users.editExchangeCredit(item.id.get)"><i class="icon-edit"></i></a>
 
                     </td>
                 </tr>
