--- a/app/views/baobei/view.scala.html
+++ b/app/views/baobei/view.scala.html
@@ -15,7 +15,7 @@ description = goods.intro
             <!-- pic show-->
                 <div class="pic-box">
 
-                    <a class="pic-link"  href='' data-itemid="@goods.numIid" target="_blank"  >
+                    <a class="pic-link"  href='@goods.clickUrl' target="_blank"  >
 
                         @for(img<-goods.itemPics.split("&")){
                         <img  src='@(img+"_460x460.jpg")' alt="@goods.name" width="460" />
@@ -31,7 +31,7 @@ description = goods.intro
                             </dl>
                         </div>
                     </div>
-                    <a class="bbl-btn pic-more" href='' data-itemid="@goods.numIid" >查看更多图片&gt;&gt;</a>
+                    <a class="bbl-btn pic-more" href='@goods.clickUrl' >查看更多图片&gt;&gt;</a>
                 </div>
 
 
@@ -75,7 +75,7 @@ description = goods.intro
                                  <span class="price-promotion"> ¥@goods.price</span>
                              </div>
 
-                       <a class="buy-btn"  href='' data-itemid="@goods.numIid"  target="_blank" rel="nofollow">去看看 &gt;&gt; </a>
+                       <a class="buy-btn"  href='@goods.clickUrl' target="_blank" rel="nofollow">去看看 &gt;&gt; </a>
 
                          </dd>
                      <dd class="shareTips">
@@ -169,24 +169,6 @@ description = goods.intro
 
 
         }{
-<script type="text/javascript">
-    (function(win,doc){
-        var s = doc.createElement("script"), h = doc.getElementsByTagName("head")[0];
-        if (!win.alimamatk_show) {
-            s.charset = "gbk";
-            s.async = true;
-            s.src = "http://a.alimama.cn/tkapi.js";
-            h.insertBefore(s, h.firstChild);
-        };
-        var o = {
-            pid: "mm_32611004_4180235_13676827",/*推广单元ID，用于区分不同的推广渠道*/
-            appkey: "21136607",/*通过TOP平台申请的appkey，设置后引导成交会关联appkey*/
-            unid: "smeite"/*自定义统计字段*/
-        };
-        win.alimamatk_onload = win.alimamatk_onload || [];
-        win.alimamatk_onload.push(o);
-    })(window,document);
-</script>
 
 
 <script type="text/javascript">
