--- a/app/views/search/result.scala.html
+++ b/app/views/search/result.scala.html
@@ -19,7 +19,7 @@ title = "宝贝搜索结果_食美特，爱美食爱生活"
         <div class="goods-wall s1024" id="J_GoodsWall">
             <div class="section">
 
-                @for((((commissionRate,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
+                @for((((sortNum,goodsId,goodsName,goodsPic,goodsLoveNum,goodsPrice,goodsPromotionPrice,goodsIntro),comments),i)<-page.items.view.zipWithIndex) {
 
                 <div class="goods small @if((i+1)%4==0){last} ">
                     <div class="goods-pic">
