adjust user commission

--- a/app/views/baobei/view.scala.html
+++ b/app/views/baobei/view.scala.html
@@ -38,7 +38,7 @@ description = goods._1.intro
             <!--pic show end-->
 
 
-
+            @goods._1.numIid
         </div>
         <!-- aside begin -->
         <div class="side">
