--- a/app/views/users/account/address.scala.html
+++ b/app/views/users/account/address.scala.html
@@ -54,7 +54,7 @@ user
 
                              <div class="form-row">
                                  <label>&nbsp;</label>
-                                 <input type="submit" class="bbl-btn submit" value="保存"><a class="ml10 mt5 fl" href="@controllers.users.routes.UsersCommission.myAward">去看我的奖品</a>
+                                 <input type="submit" class="bbl-btn submit" value="保存"><a class="ml10 mt5 fl" href="@controllers.users.routes.UsersAccount.myAward">去看我的奖品</a>
                              </div>
                          </form>
                      </div>
