--- a/app/views/users/account/myCredits.scala.html
+++ b/app/views/users/account/myCredits.scala.html
@@ -8,10 +8,10 @@ user
             <h2>我的返利</h2>
             <ul>
 
-                <li> <a  class="on"  href="@controllers.users.routes.UsersCommission.myCredits(1)">我的集分宝</a> </li>
-                <li> <a  href="@controllers.users.routes.UsersCommission.myShiDou(1)">我的食豆</a>  </li>
-                <li> <a  href="@controllers.users.routes.UsersCommission.myAward">我的奖品</a>  </li>
-                <li> <a href="@controllers.users.routes.UsersCommission.invite(1)">邀请有奖</a> </li>
+                <li> <a  class="on"  href="@controllers.users.routes.UsersAccount.myCredits(1)">我的集分宝</a> </li>
+                <li> <a  href="@controllers.users.routes.UsersAccount.myShiDou(1)">我的食豆</a>  </li>
+                <li> <a  href="@controllers.users.routes.UsersAccount.myAward">我的奖品</a>  </li>
+                <li> <a href="@controllers.users.routes.UsersAccount.invite(1)">邀请有奖</a> </li>
             </ul>
         </div>
         <div class="main-content">
@@ -59,7 +59,7 @@ user
                     }
                     }else{
                     <tr>
-                        <td colspan="5" class="table_one">您还没有获得邀请有奖，<a href="@controllers.users.routes.UsersCommission.invite(1)">去邀请朋友吧</a> </td>
+                        <td colspan="5" class="table_one">您还没有获得邀请有奖，<a href="@controllers.users.routes.UsersAccount.invite(1)">去邀请朋友吧</a> </td>
                     </tr>
                     }
                     </tbody>
@@ -68,17 +68,17 @@ user
                     <div class="pagin fr pagination" id="J_Pagination">
                         @if(prizes.nums.length>1){
                         @prizes.prev.map { page =>
-                        <a class="prev" href="@controllers.users.routes.UsersCommission.myCredits(page)">上一页</a>
+                        <a class="prev" href="@controllers.users.routes.UsersAccount.myCredits(page)">上一页</a>
                         }
                         @for(num <-prizes.nums){
                         @if(num==prizes.currentPage){
                         <span class="current">@num</span>
                         }else {
-                        <a href="@controllers.users.routes.UsersCommission.myCredits(num)">@num</a>
+                        <a href="@controllers.users.routes.UsersAccount.myCredits(num)">@num</a>
                         }
                         }
                         @prizes.next.map { page =>
-                        <a class="next" href="@controllers.users.routes.UsersCommission.myCredits(page)">下一页</a>
+                        <a class="next" href="@controllers.users.routes.UsersAccount.myCredits(page)">下一页</a>
                         }
                         }
                     </div>
