--- a/public/assets/css/global/global.css
+++ b/public/assets/css/global/global.css
@@ -8,654 +8,150 @@
 #J_Page {
     background-color: #F9F9EF;
 }
-body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td {
-    margin: 0;
-    padding: 0
-}
-
-body, button, input, select, textarea {
-
-    font: 12px Microsoft YaHei, Arial, Helvetica, sans-serif
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-size: 100%;
-    color: #333
-}
-
-address, cite, dfn, em, var {
-    font-style: normal
-}
-
-code, kbd, pre, samp {
-    font-family: courier new, courier, monospace
-}
-
-small {
-    font-size: 12px
-}
-
-ul, ol, li {
-    list-style: none
-}
-
-a {
-    text-decoration: none;
-    color: #333;
-}
-a:hover{
-    text-decoration: none;
-}
-
-.black:link, .black:visited {
-    color: #333
-}
-
-.black:hover, .black:active {
-    background: #333;
-    color: #fff
-}
-
-.gray:link, .gray:visited {
-    color: #666
-}
-
-.gray:hover, .gray:active {
-    background: #666;
-    color: #fff
-}
-
-.green:link, .green:visited {
-    color: #588c0e
-}
-
-.green:hover, .green:active {
-    background: #588c0e;
-    color: #fff
-}
-
-.red {
-    color: #E26;
-}
-.red:link, .red:visited {
-    color: #E26
-}
-.red:hover, .red:active {
-    background: #E26;
-    color: white;
-}
-
-
-sup {
-    vertical-align: text-top
-}
-
-sub {
-    vertical-align: text-bottom
-}
-
-legend {
-    color: #000
-}
-
-fieldset, img {
-    border: 0
-}
-
-button, input, select, textarea {
-    font-size: 100%
-}
-
-table {
-    border-collapse: collapse;
-    border-spacing: 0
-}
-
-img {
-    vertical-align: top;
-    display: inline-block;
-    background-color: #fff
-}
-
-article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video {
-    display: block;
-    margin: 0;
-    padding: 0
-}
-
-mark {
-    background: #ff0
-}
-
-object, embed {
-    outline: 0
-}
-
-p {
-    line-height: 1.6;
-    color: #666
-}
-
-.r3 {
-    -moz-border-radius: 3px;
-    -khtml-border-radius: 3px;
-    -webkit-border-radius: 3px;
-    border-radius: 3px
-}
-
-.r5 {
-    -moz-border-radius: 5px;
-    -khtml-border-radius: 5px;
-    -webkit-border-radius: 5px;
-    border-radius: 5px
-}
-
-.r10 {
-    -moz-border-radius: 10px;
-    -khtml-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px
-}
-
-.rt3 {
-    -moz-border-radius: 3px 3px 0 0;
-    -khtml-border-radius: 3px 3px 0 0;
-    -webkit-border-radius: 3px 3px 0 0;
-    border-radius: 3px 3px 0 0
-}
-
-.rt5 {
-    -moz-border-radius: 5px 5px 0 0;
-    -khtml-border-radius: 5px 5px 0 0;
-    -webkit-border-radius: 5px 5px 0 0;
-    border-radius: 5px 5px 0 0
-}
-
-.rt10 {
-    -moz-border-radius: 10px 10px 0 0;
-    -khtml-border-radius: 10px 10px 0 0;
-    -webkit-border-radius: 10px 10px 0 0;
-    border-radius: 10px 10px 0 0
-}
-
-.rb3 {
-    -moz-border-radius: 0 0 3px 3px;
-    -khtml-border-radius: 0 0 3px 3px;
-    -webkit-border-radius: 0 0 3px 3px;
-    border-radius: 0 0 3px 3px
-}
-
-.rb5 {
-    -moz-border-radius: 0 0 5px 5px;
-    -khtml-border-radius: 0 0 5px 5px;
-    -webkit-border-radius: 0 0 5px 5px;
-    border-radius: 0 0 5px 5px
-}
-
-.rb10 {
-    -moz-border-radius: 0 0 10px 10px;
-    -khtml-border-radius: 0 0 10px 10px;
-    -webkit-border-radius: 0 0 10px 10px;
-    border-radius: 0 0 10px 10px
-}
-
-.rl3 {
-    -moz-border-radius: 3px 0 0 3px;
-    -khtml-border-radius: 3px 0 0 3px;
-    -webkit-border-radius: 3px 0 0 3px;
-    border-radius: 3px 0 0 3px
-}
-
-.rl5 {
-    -moz-border-radius: 5px 0 0 5px;
-    -khtml-border-radius: 5px 0 0 5px;
-    -webkit-border-radius: 5px 0 0 5px;
-    border-radius: 5px 0 0 5px
-}
-
-.rl10 {
-    -moz-border-radius: 10px 0 0 10px;
-    -khtml-border-radius: 10px 0 0 10px;
-    -webkit-border-radius: 10px 0 0 10px;
-    border-radius: 10px 0 0 10px
-}
-
-.rr3 {
-    -moz-border-radius: 0 3px 3px 0;
-    -khtml-border-radius: 0 3px 3px 0;
-    -webkit-border-radius: 0 3px 3px 0;
-    border-radius: 0 3px 3px 0
-}
-
-.rr5 {
-    -moz-border-radius: 0 5px 5px 0;
-    -khtml-border-radius: 0 5px 5px 0;
-    -webkit-border-radius: 0 5px 5px 0;
-    border-radius: 0 5px 5px 0
-}
-
-.rr10 {
-    -moz-border-radius: 0 10px 10px 0;
-    -khtml-border-radius: 0 10px 10px 0;
-    -webkit-border-radius: 0 10px 10px 0;
-    border-radius: 0 10px 10px 0
-}
-
-.fl {
-    float: left;
-    display: inline
-}
-
-.fr {
-    float: right;
-    display: inline
-}
-
-.mt0 {
-    margin-top: 0
-}
-
-.mt5 {
-    margin-top: 5px
-}
-
-.mt10 {
-    margin-top: 10px
-}
-
-.mt15 {
-    margin-top: 15px
-}
-
-.mt20 {
-    margin-top: 20px
-}
-
-.mt25 {
-    margin-top: 25px
-}
-
-.mt30 {
-    margin-top: 30px
-}
-
-.mt35 {
-    margin-top: 35px
-}
-
-.mt40 {
-    margin-top: 40px
-}
-
-.mr0 {
-    margin-right: 0
-}
-
-.mr5 {
-    margin-right: 5px
-}
-
-.mr10 {
-    margin-right: 10px
-}
-
-.mr15 {
-    margin-right: 15px
-}
-
-.mr20 {
-    margin-right: 20px
-}
-
-.mr25 {
-    margin-right: 25px
-}
-
-.mr30 {
-    margin-right: 30px
-}
-
-.mr35 {
-    margin-right: 35px
-}
-
-.mr40 {
-    margin-right: 40px
-}
-
-.mb0 {
-    margin-bottom: 0
-}
-
-.mb5 {
-    margin-bottom: 5px
-}
-
-.mb10 {
-    margin-bottom: 10px
-}
-
-.mb15 {
-    margin-bottom: 15px
-}
-
-.mb20 {
-    margin-bottom: 20px
-}
-
-.mb25 {
-    margin-bottom: 25px
-}
-
-.mb30 {
-    margin-bottom: 30px
-}
-
-.mb35 {
-    margin-bottom: 35px
-}
-
-.ml0 {
-    margin-left: 0
-}
-
-.ml5 {
-    margin-left: 5px
-}
-
-.ml10 {
-    margin-left: 10px
-}
-
-.ml15 {
-    margin-left: 15px
-}
-
-.ml20 {
-    margin-left: 20px
-}
-
-.ml25 {
-    margin-left: 25px
-}
-
-.ml30 {
-    margin-left: 30px
-}
-
-.ml35 {
-    margin-left: 35px
-}
-
-.ml40 {
-    margin-left: 40px
-}
-
-.mlr5 {
-    margin: 0 5px 0 5px
-}
-
-.mlr10 {
-    margin: 0 10px 0 10px
-}
-
-.pt0 {
-    padding-top: 0
-}
-
-.pt5 {
-    padding-top: 5px
-}
-
-.pt10 {
-    padding-top: 10px
-}
-
-.pt15 {
-    padding-top: 15px
-}
-
-.pt20 {
-    padding-top: 20px
-}
-
-.pt25 {
-    padding-top: 25px
-}
-
-.pt30 {
-    padding-top: 30px
-}
-
-.pt40 {
-    padding-top: 40px
-}
-
-.pr0 {
-    padding-right: 0
-}
-
-.pr5 {
-    padding-right: 5px
-}
-
-.pr10 {
-    padding-right: 10px
-}
-
-.pr15 {
-    padding-right: 15px
-}
-
-.pr20 {
-    padding-right: 20px
-}
-
-.pr25 {
-    padding-right: 25px
-}
-
-.pr30 {
-    padding-right: 30px
-}
-
-.pr35 {
-    padding-right: 35px
-}
-
-.pb0 {
-    padding-bottom: 0
-}
-
-.pb5 {
-    padding-bottom: 5px
-}
-
-.pb10 {
-    padding-bottom: 10px
-}
-
-.pb15 {
-    padding-bottom: 15px
-}
-
-.pb20 {
-    padding-bottom: 20px
-}
-
-.pb25 {
-    padding-bottom: 25px
-}
-
-.pb30 {
-    padding-bottom: 30px
-}
-
-.pb35 {
-    padding-bottom: 35px
-}
-
-.pl0 {
-    padding-left: 0
-}
-
-.pl5 {
-    padding-left: 5px
-}
-
-.pl10 {
-    padding-left: 10px
-}
-
-.pl15 {
-    padding-left: 15px
-}
-
-.pl20 {
-    padding-left: 20px
-}
-
-.pl25 {
-    padding-left: 25px
-}
-
-.pl30 {
-    padding-left: 30px
-}
-
-.pl35 {
-    padding-left: 35px
-}
-
-.pl40 {
-    padding-left: 40px
-}
-
-.plr10 {
-    padding: 0 10px
-}
-
-.plr15 {
-    padding: 0 15px
-}
-
-.pd10 {
-    padding: 10px
-}
-
-.pd20 {
-    padding: 20px
-}
-
-.pd40 {
-    padding: 40px
-}
-
-.rc {
-    color: #e26
-}
-
-.bc {
-    color: #5ad
-}
-
-.yc {
-    color: #e63
-}
-
-.gc {
-    color: #999
-}
-
-.gc6 {
-    color: #666
-}
-
-.gcc {
-    color: #dedede
-}
-
-.ofh {
-    white-space: nowrap;
-    word-wrap: normal;
-    word-break: normal;
-    text-overflow: ellipsis;
-    -o-text-overflow: ellipsis;
-    overflow: hidden
-}
-
-.clearfix {
-    *zoom: 1;
-}
-
-.clearfix:before,
-.clearfix:after {
-    display: table;
-    content: "";
-}
-
-.clearfix:after {
-    clear: both;
-}
-.clear{
-    clear: both;
-    display: block;
-    font-size: 0;
-    height: 0;
-    line-height: 0;
-    overflow: hidden;
-}
-
-.inlineblock {
-    display: inline-block;
-    zoom: 1;
-    *display: inline;
-    overflow: hidden
-}
-
-.bigfs {
-    font-family: '微软雅黑', 'YaHei', '黑体', 'Hei', Tahoma, Helvetica, arial, sans-serif
-}
-
-.fs12 {
-    font-size: 12px
-}
-
-.fs14 {
-    font-size: 14px
-}
-
-.fs16 {
-    font-size: 16px
-}
-
-.fs16 {
-    font-size: 18px
-}
-
-.fs20 {
-    font-size: 20px
-}
-
-.fs30 {
-    font-size: 30px
-}
-.fs40 {
-    font-size: 40px
-}
-
-.tac {
-    text-align: center
-}
-
-.tar {
-    text-align: right
-}
-
-.dn {
-    display: none
-}
-
+body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td { margin: 0; padding: 0}
+body, button, input, select, textarea { font: 12px Microsoft YaHei, Arial, Helvetica, sans-serif}
+h1, h2, h3, h4, h5, h6 { font-size: 100%;color: #333}
+address, cite, dfn, em, var {  font-style: normal}
+code, kbd, pre, samp { font-family: courier new, courier, monospace}
+small {font-size: 12px}
+ul, ol, li { list-style: none}
+a { text-decoration: none; color: #333;}
+a:hover{ text-decoration: none;}
+.black:link, .black:visited { color: #333}
+.black:hover, .black:active { background: #333;color: #fff}
+.gray:link,.gray:visited { color: #666}
+.gray:hover, .gray:active {background: #666; color: #fff    }
+.green:link, .green:visited {color: #588c0e}
+.green:hover, .green:active { background: #588c0e;color: #fff}
+.red {color: #E26;}
+.red:link, .red:visited { color: #E26}
+.red:hover, .red:active { background: #E26; color: white;}
+sup { vertical-align: text-top}
+sub {vertical-align: text-bottom}
+legend{color: #000}
+fieldset,img {border: 0}
+button, input, select, textarea { font-size: 100%}
+table { border-collapse: collapse; border-spacing: 0}
+img { vertical-align: top; display: inline-block;background-color: #fff}
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, summary, time, mark, audio, video { display: block;margin: 0; padding: 0}
+mark { background: #ff0}
+object, embed { outline: 0}
+p { line-height: 1.6; color: #666}
+.r3 {-moz-border-radius: 3px;-khtml-border-radius: 3px;-webkit-border-radius: 3px;border-radius: 3px}
+.r5 { -moz-border-radius: 5px; -khtml-border-radius: 5px; -webkit-border-radius: 5px; border-radius: 5px}
+.r10 { -moz-border-radius: 10px;-khtml-border-radius: 10px;-webkit-border-radius: 10px;border-radius: 10px}
+.rt3 { -moz-border-radius: 3px 3px 0 0; -khtml-border-radius: 3px 3px 0 0;-webkit-border-radius: 3px 3px 0 0;border-radius: 3px 3px 0 0}
+.rt5 {-moz-border-radius: 5px 5px 0 0;-khtml-border-radius: 5px 5px 0 0;-webkit-border-radius: 5px 5px 0 0; border-radius: 5px 5px 0 0}
+.rt10 {-moz-border-radius: 10px 10px 0 0;-khtml-border-radius: 10px 10px 0 0; -webkit-border-radius: 10px 10px 0 0; border-radius: 10px 10px 0 0}
+.rb3 {-moz-border-radius: 0 0 3px 3px;-khtml-border-radius: 0 0 3px 3px;-webkit-border-radius: 0 0 3px 3px;border-radius: 0 0 3px 3px}
+.rb5 {-moz-border-radius: 0 0 5px 5px; -khtml-border-radius: 0 0 5px 5px; -webkit-border-radius: 0 0 5px 5px; border-radius: 0 0 5px 5px}
+.rb10 {-moz-border-radius: 0 0 10px 10px;-khtml-border-radius: 0 0 10px 10px;-webkit-border-radius: 0 0 10px 10px;border-radius: 0 0 10px 10px}
+.rl3 { -moz-border-radius: 3px 0 0 3px;-khtml-border-radius: 3px 0 0 3px;-webkit-border-radius: 3px 0 0 3px;border-radius: 3px 0 0 3px}
+.rl5 {-moz-border-radius: 5px 0 0 5px;-khtml-border-radius: 5px 0 0 5px;-webkit-border-radius: 5px 0 0 5px; border-radius: 5px 0 0 5px}
+.rl10 { -moz-border-radius: 10px 0 0 10px;-khtml-border-radius: 10px 0 0 10px;-webkit-border-radius: 10px 0 0 10px;border-radius: 10px 0 0 10px}
+.rr3 {-moz-border-radius: 0 3px 3px 0;-khtml-border-radius: 0 3px 3px 0;-webkit-border-radius: 0 3px 3px 0;border-radius: 0 3px 3px 0}
+.rr5 {-moz-border-radius: 0 5px 5px 0;-khtml-border-radius: 0 5px 5px 0; -webkit-border-radius: 0 5px 5px 0;border-radius: 0 5px 5px 0}
+.rr10 {-moz-border-radius: 0 10px 10px 0;-khtml-border-radius: 0 10px 10px 0;-webkit-border-radius: 0 10px 10px 0; border-radius: 0 10px 10px 0}
+.fl {float: left;display: inline}
+.fr {float: right;display: inline}
+.mt0 { margin-top: 0}
+.mt5 {margin-top: 5px}
+.mt10 {margin-top: 10px}
+.mt15 { margin-top: 15px}
+.mt20 {margin-top: 20px}
+.mt25 { margin-top: 25px}
+.mt30 {margin-top: 30px}
+.mt35 { margin-top: 35px}
+.mt40 { margin-top: 40px}
+.mr0 { margin-right: 0}
+.mr5 { margin-right: 5px}
+.mr10 { margin-right: 10px}
+.mr15 { margin-right: 15px}
+.mr20 { margin-right: 20px}
+.mr25 { margin-right: 25px}
+.mr30 { margin-right: 30px}
+.mr35 { margin-right: 35px}
+.mr40 { margin-right: 40px}
+.mb0 { margin-bottom: 0}
+.mb5 { margin-bottom: 5px}
+.mb10 { margin-bottom: 10px}
+.mb15 {margin-bottom: 15px}
+.mb20 { margin-bottom: 20px}
+.mb25 { margin-bottom: 25px}
+.mb30 { margin-bottom: 30px}
+.mb35 { margin-bottom: 35px}
+.ml0 { margin-left: 0}
+.ml5 { margin-left: 5px}
+.ml10 {margin-left: 10px}
+.ml15 {margin-left: 15px}
+.ml20 { margin-left: 20px}
+.ml25 { margin-left: 25px}
+.ml30 {margin-left: 30px}
+.ml35 { margin-left: 35px}
+.ml40 { margin-left: 40px}
+.mlr5 { margin: 0 5px 0 5px}
+.mlr10 { margin: 0 10px 0 10px}
+.pt0 { padding-top: 0}
+.pt5 {padding-top: 5px}
+.pt10 { padding-top: 10px}
+.pt15 {padding-top: 15px}
+.pt20 {padding-top: 20px}
+.pt25 { padding-top: 25px}
+.pt30 { padding-top: 30px}
+.pt40 { padding-top: 40px}
+.pr0 { padding-right: 0}
+.pr5 { padding-right: 5px}
+.pr10 { padding-right: 10px}
+.pr15 { padding-right: 15px}
+.pr20 { padding-right: 20px}
+.pr25 {padding-right: 25px}
+.pr30 { padding-right: 30px}
+.pr35 {padding-right: 35px}
+.pb0 { padding-bottom: 0}
+.pb5 {padding-bottom: 5px}
+.pb10 { padding-bottom: 10px}
+.pb15 { padding-bottom: 15px}
+.pb20 { padding-bottom: 20px}
+.pb25 {padding-bottom: 25px}
+.pb30 { padding-bottom: 30px}
+.pb35 { padding-bottom: 35px}
+.pl0 {padding-left: 0}
+.pl5 {padding-left: 5px}
+.pl10 { padding-left: 10px}
+.pl15 {padding-left: 15px}
+.pl20 {padding-left: 20px}
+.pl25 {padding-left: 25px}
+.pl30 { padding-left: 30px}
+.pl35 { padding-left: 35px}
+.pl40 {padding-left: 40px}
+.plr10 { padding: 0 10px}
+.plr15 {padding: 0 15px}
+.pd10 { padding: 10px}
+.pd20 {padding: 20px}
+.pd40 { padding: 40px}
+.rc {color: #e26}
+.bc {color: #5ad}
+.yc {color: #e63}
+.gc { color: #999}
+.gc6 {color: #666}
+.gcc {color: #dedede}
+.ofh {white-space: nowrap;word-wrap: normal;word-break: normal;text-overflow: ellipsis;-o-text-overflow: ellipsis;overflow: hidden}
+.clearfix {*zoom: 1;}
+.clearfix:before,.clearfix:after {display: table;content: "";}
+.clearfix:after {clear: both;}
+.clear{clear: both;display: block;font-size: 0;height: 0;line-height: 0;overflow: hidden;}
+.inlineblock { display: inline-block;zoom: 1;*display: inline;overflow: hidden}
+.bigfs {font-family: '微软雅黑', 'YaHei', '黑体', 'Hei', Tahoma, Helvetica, arial, sans-serif}
+.fs12 {font-size: 12px}
+.fs14 {font-size: 14px}
+.fs16 {font-size: 16px}
+.fs18 {font-size: 18px}
+.fs20 {font-size: 20px}
+.fs30 { font-size: 30px}
+.fs40 {font-size: 40px}
+.tac { text-align: center}
+.tar {text-align: right}
+.dn {display: none}
 
 /* 全局 基本样式 */
 /**
@@ -951,15 +447,7 @@ input:-moz-placeholder { font-size:12px; }
 .goods-wall { position:relative;min-height:500px;margin-top:20px; }
 .goods { position:absolute;width:210px;padding:10px;color:#999;background-color:white;/*-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;*/box-shadow:0 1px 3px rgba(34,25,25,0.2);-moz-box-shadow:0 1px 3px rgba(34,25,25,0.2);-webkit-box-shadow:0 1px 3px rgba(34,25,25,0.2);transition:0.3s;-webkit-transition:0.3s;-moz-transition:0.3s;-o-transition:0.3s; }
 .goods .goods-pic { position:relative;width:210px;overflow:hidden; }
-.goods .goods-pic .pic-link {
-    display: table-cell;
-    width: 210px;
-    text-align: center;
-    vertical-align: middle;
-    height: 210px;
-    *display:block;
-    *font-size: 183px;
-}
+.goods .goods-pic .pic-link { display: table-cell; width: 210px; text-align: center;vertical-align: middle;height: 210px; *display:block; *font-size: 183px;}
 .goods .goods-stat { height:20px;line-height:20px;padding-top: 10px; }
 .goods .comments { padding-top:5px;overflow: hidden;line-height: 18px}
 .goods .comments li { width:205px;line-height:18px;padding:10px 0 0 5px;/*white-space:nowrap;*/word-wrap:normal;word-break:normal;text-overflow:ellipsis;-o-text-overflow:ellipsis;overflow:hidden; }
@@ -1630,16 +1118,7 @@ a:hover i.ico-likes { background: url(images/like_h.png) no-repeat; _background:
 #nav .xiaoxi-tip .closetip:hover { color:#666;text-decoration:none; }
 /* end */
 /*登陆注册*/
-#nav .regLogin {
-    position:relative;
-    height:20px;
-    margin-top:8px;
-    padding:2px 0;
-    background:#fff;
-    line-height:20px;
-    cursor:pointer;
-    border:none;
-}
+#nav .regLogin {position:relative; height:20px; margin-top:8px; padding:2px 0;background:#fff;line-height:20px;cursor:pointer;border:none;}
 #nav .regLogin a{color:#333}
 #nav .regLogin .arrow-dn-r{position:absolute;width:13px;height:20px;top:2px;right:0;background:url(images/arrow-d.png) no-repeat center left; border-right:1px dotted #dcdcdc}
 #nav .regLogin .login-dropdown, .share-dropdown { display:none;position:absolute;top:30px;left:0;z-index:999;width:108px;padding:0 6px;background:#fff;border:1px solid #e5e5e5; }
